# examples

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md
pipelines/: pyproject.toml
pipelines/ecommerce_analytics/: requete.yaml
pipelines/ecommerce_analytics/promotes/: promote_analytics.py
pipelines/ecommerce_analytics/sessions/: duckdb.py  spark.py
pipelines/ecommerce_analytics/sinks/: write_daily_summary.py  write_user_segments.py
pipelines/ecommerce_analytics/sources/: orders.py  products.py  users.py
pipelines/ecommerce_analytics/transforms/: daily_metrics.py  enrich_orders.py  top_products.py  user_segments.py
pipelines/large_pipeline/: requete.yaml
pipelines/large_pipeline/promotes/: promote_1.py  promote_2.py
pipelines/large_pipeline/sessions/: spark.py
pipelines/large_pipeline/sinks/: sink_1.py  sink_2.py  sink_3.py  sink_4.py  sink_5.py
pipelines/large_pipeline/sources/: source_1.py  source_10.py  source_2.py  source_3.py  source_4.py  source_5.py  source_6.py  source_7.py  source_8.py  source_9.py
pipelines/large_pipeline/transforms/: transform_l1_1.py  transform_l1_10.py  transform_l1_11.py  transform_l1_12.py  transform_l1_13.py  transform_l1_14.py  transform_l1_15.py  transform_l1_16.py  transform_l1_17.py  transform_l1_18.py  transform_l1_19.py  transform_l1_2.py  transform_l1_20.py  transform_l1_3.py  transform_l1_4.py  transform_l1_5.py  transform_l1_6.py  transform_l1_7.py  transform_l1_8.py  transform_l1_9.py  transform_l2_1.py  transform_l2_10.py  transform_l2_11.py  transform_l2_12.py  (+26 more)
pipelines/simple/: requete.yaml
(+8 files in other folders)
