[project]
name = "requete-pipelines"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pyspark==3.5.0",
    "duckdb>=1.1.0",
    "requete>=0.1.0",
    "ruff>=0.9.0",
    "basedpyright>=1.18.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.basedpyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
